--- a/ProyectoDI_GrupoD/App.config
+++ b/ProyectoDI_GrupoD/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.BDequipoD.csdl|res://*/Infrastructure.BDequipoD.ssdl|res://*/Infrastructure.BDequipoD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pruebasqlserver.cpokq0cuyobk.eu-west-3.rds.amazonaws.com;initial catalog=equipod;user id=admin;password=Root2_root22;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
