Creación de registro correctamente.

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -75,6 +75,7 @@
       <DependentUpon>BDequipoD.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\PruebaDeConexion.cs" />
   </ItemGroup>
   <ItemGroup>
