--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -52,6 +52,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Boton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PantallaPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
