Nueva conexión base de datos, refactorización y pruebas (No funciona bien)
Hay nueva conexión a la base de datos (Local andoni) ya que a gabriel se le ha caido la suya.
Estoy haciendo pruebas y necesito hacer este commit.
NO OS BAJEIS ESTE COMMIT.

--- a/Datos/App.Config
+++ b/Datos/App.Config
@@ -11,6 +11,6 @@
     </providers>
   </entityFramework>
     <connectionStrings>
-	    <add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.BDequipoD.csdl|res://*/Infrastructure.BDequipoD.ssdl|res://*/Infrastructure.BDequipoD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pruebasqlserver.cpokq0cuyobk.eu-west-3.rds.amazonaws.com;initial catalog=equipod;user id=admin;password=Root2_root22;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    </connectionStrings>
+		<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDONI\SQLEXPRESS;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
 </configuration>
