--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -51,41 +51,41 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Infrastructure\Actividades.cs">
-      <DependentUpon>BDequipoD.tt</DependentUpon>
+      <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\BDequipoD.Context.cs">
+    <Compile Include="Infrastructure\equipodBD.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>BDequipoD.Context.tt</DependentUpon>
+      <DependentUpon>equipodBD.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\BDequipoD.cs">
+    <Compile Include="Infrastructure\equipodBD.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>BDequipoD.tt</DependentUpon>
+      <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\BDequipoD.Designer.cs">
+    <Compile Include="Infrastructure\equipodBD.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>BDequipoD.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Infrastructure\Usuarios.cs">
-      <DependentUpon>BDequipoD.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Infrastructure\Valoraciones.cs">
-      <DependentUpon>BDequipoD.tt</DependentUpon>
+      <DependentUpon>equipodBD.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\PruebaDeConexion.cs" />
+    <Compile Include="Infrastructure\Usuarios.cs">
+      <DependentUpon>equipodBD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Infrastructure\Valoraciones.cs">
+      <DependentUpon>equipodBD.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
-    <EntityDeploy Include="Infrastructure\BDequipoD.edmx">
+    <EntityDeploy Include="Infrastructure\equipodBD.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>BDequipoD.Designer.cs</LastGenOutput>
+      <LastGenOutput>equipodBD.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="Infrastructure\BDequipoD.edmx.diagram">
-      <DependentUpon>BDequipoD.edmx</DependentUpon>
+    <None Include="Infrastructure\equipodBD.edmx.diagram">
+      <DependentUpon>equipodBD.edmx</DependentUpon>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
@@ -93,16 +93,17 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Infrastructure\BDequipoD.Context.tt">
+    <Content Include="Infrastructure\equipodBD.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BDequipoD.edmx</DependentUpon>
-      <LastGenOutput>BDequipoD.Context.cs</LastGenOutput>
+      <DependentUpon>equipodBD.edmx</DependentUpon>
+      <LastGenOutput>equipodBD.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="Infrastructure\BDequipoD.tt">
+    <Content Include="Infrastructure\equipodBD.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>BDequipoD.edmx</DependentUpon>
-      <LastGenOutput>BDequipoD.cs</LastGenOutput>
+      <DependentUpon>equipodBD.edmx</DependentUpon>
+      <LastGenOutput>equipodBD.cs</LastGenOutput>
     </Content>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
