Tests inicio sesión y registro correctos.

--- a/KAETesting/KAETesting.csproj
+++ b/KAETesting/KAETesting.csproj
@@ -70,7 +70,8 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="InicioSesionTest.cs" />
+    <Compile Include="RegistroTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
