Intento registro cliente
Que el alta tenga que recibir un Usuario y un cliente, quitar herencia

--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -34,10 +34,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\Datos\bin\Debug\EntityFramework.dll</HintPath>
+      <HintPath>..\..\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\Datos\bin\Debug\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\..\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
