--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EntitiesDTO\ActividadesDTO.cs" />
+    <Compile Include="EntitiesDTO\ActividadesMonitoresDTO.cs" />
     <Compile Include="EntitiesDTO\ClientesDTO.cs" />
     <Compile Include="EntitiesDTO\UsuariosDTO.cs" />
+    <Compile Include="Management\ActividadesManagement.cs" />
     <Compile Include="Management\UsuarioManagement.cs" />
     <Compile Include="Management\PruebaDeConexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
