--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -61,6 +61,12 @@
     <Compile Include="ImageButton.Designer.cs">
       <DependentUpon>ImageButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\ListadoActividades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\ListadoActividades.Designer.cs">
+      <DependentUpon>ListadoActividades.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\MenuInicio.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </Compile>
     <EmbeddedResource Include="ImageButton.resx">
       <DependentUpon>ImageButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ListadoActividades.resx">
+      <DependentUpon>ListadoActividades.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\MenuInicio.resx">
       <DependentUpon>MenuInicio.cs</DependentUpon>
