--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,6 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntitiesDTO\ActividadDTO.cs" />
+    <Compile Include="EntitiesDTO\ActividadesMonitoresDTO.cs" />
+    <Compile Include="EntitiesDTO\AdministradorDTO.cs" />
+    <Compile Include="EntitiesDTO\ClientesDTO.cs" />
+    <Compile Include="EntitiesDTO\MonitorDTO.cs" />
     <Compile Include="EntitiesDTO\UsuariosDTO.cs" />
     <Compile Include="Management\ActividadManagement.cs" />
     <Compile Include="Management\MonitorManagement.cs" />
