Cambios de codigo por el "merge" y refactorizacion

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -84,8 +84,7 @@
       <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ActividadesRepository.cs" />
-    <Compile Include="Repositories\ActivityRepository.cs" />
+    <Compile Include="Repositories\ActividadRepository.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\MonitorRepository.cs" />
     <Compile Include="Repositories\PruebaDeConexion.cs" />
