--- a/ProyectoDI_GrupoD/App.config
+++ b/ProyectoDI_GrupoD/App.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
 	<connectionStrings>
-		<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C02PC03\SQLEXPRESS;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipod.csdl|res://*/Infrastructure.equipod.ssdl|res://*/Infrastructure.equipod.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C02PC03\SQLEXPRESS;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="ProyectoDI_GrupoD.Properties.Settings.equipodConnectionString"
+   connectionString="Data Source=C02PC03\SQLEXPRESS;Initial Catalog=equipod;Integrated Security=True;Encrypt=True;TrustServerCertificate=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
