--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -55,6 +55,11 @@
     <Compile Include="Botones.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="equipodDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>equipodDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ImageButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -120,6 +125,9 @@
     <EmbeddedResource Include="Vistas\AltaActividad.resx">
       <DependentUpon>AltaActividad.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ListadoActividades.resx">
+      <DependentUpon>ListadoActividades.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\MenuInicio.resx">
       <DependentUpon>MenuInicio.cs</DependentUpon>
     </EmbeddedResource>
@@ -148,6 +156,17 @@
     <EmbeddedResource Include="Vistas\RegistroMonitor.resx">
       <DependentUpon>RegistroMonitor.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="equipodDataSet.xsc">
+      <DependentUpon>equipodDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="equipodDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>equipodDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="equipodDataSet.xss">
+      <DependentUpon>equipodDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
