--- a/Datos/App.Config
+++ b/Datos/App.Config
@@ -10,7 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-    <connectionStrings>
-	    <add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipod.csdl|res://*/Infrastructure.equipod.ssdl|res://*/Infrastructure.equipod.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C02PC03\SQLEXPRESS;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    </connectionStrings>
+<connectionStrings>
+	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDONI\SQLEXPRESS;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+</connectionStrings>
 </configuration>
