--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -64,16 +64,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>equipodBD.Context.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\equipodBD.cs" />
-    <Compile Include="Infrastructure\equipodBD.Designer.cs">
-      <DependentUpon>equipodBD.edmx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Infrastructure\equipodBD1.cs">
+    <Compile Include="Infrastructure\equipodBD.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>equipodBD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Infrastructure\equipodBD.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>equipodBD.edmx</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Monitores.cs">
       <DependentUpon>equipodBD.tt</DependentUpon>
@@ -81,14 +80,15 @@
     <Compile Include="Infrastructure\Usuarios.cs">
       <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\Usuarios_Actividades.cs" />
     <Compile Include="Infrastructure\Valoraciones.cs">
       <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ActividadRepository.cs" />
+    <Compile Include="Repositories\ActividadUsuarioRepository.cs" />
     <Compile Include="Repositories\ClientRepository.cs" />
     <Compile Include="Repositories\MonitorRepository.cs" />
-    <Compile Include="Repositories\PruebaDeConexion.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Infrastructure\equipodBD.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -113,7 +114,7 @@
     <Content Include="Infrastructure\equipodBD.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>equipodBD.edmx</DependentUpon>
-      <LastGenOutput>equipodBD1.cs</LastGenOutput>
+      <LastGenOutput>equipodBD.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
