--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -67,6 +67,12 @@
     <Compile Include="Vistas\AltaActividad.Designer.cs">
       <DependentUpon>AltaActividad.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\ListadoActUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\ListadoActUsuario.Designer.cs">
+      <DependentUpon>ListadoActUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\ListadoActividades.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +129,9 @@
     <EmbeddedResource Include="Vistas\ListadoActividades.resx">
       <DependentUpon>ListadoActividades.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ListadoActUsuario.resx">
+      <DependentUpon>ListadoActUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vistas\MenuInicio.resx">
       <DependentUpon>MenuInicio.cs</DependentUpon>
     </EmbeddedResource>
@@ -151,6 +160,7 @@
     <EmbeddedResource Include="Vistas\RegistroMonitor.resx">
       <DependentUpon>RegistroMonitor.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Negocio.EntitiesDTO.ActividadesMonitoresDTO.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
