Apuntar actividad y el listado
El usuario ya se puede apuntar a la actividad, falta que el listado coja las actividades y tenga dos botones, apuntarse (Si esta apuntado que se deshabilite) y para desapuntarse (Que se deshabilite si no esta apuntado). Añadir imagenes a estas columnas.

--- a/Datos/Datos.csproj
+++ b/Datos/Datos.csproj
@@ -80,7 +80,9 @@
     <Compile Include="Infrastructure\Usuarios.cs">
       <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
-    <Compile Include="Infrastructure\Usuarios_Actividades.cs" />
+    <Compile Include="Infrastructure\Usuarios_Actividades.cs">
+      <DependentUpon>equipodBD.tt</DependentUpon>
+    </Compile>
     <Compile Include="Infrastructure\Valoraciones.cs">
       <DependentUpon>equipodBD.tt</DependentUpon>
     </Compile>
@@ -104,7 +106,6 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
     <Content Include="Infrastructure\equipodBD.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
