--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntitiesDTO\ActividadDTO.cs" />
+    <Compile Include="EntitiesDTO\ActividadesClientesDTO.cs" />
     <Compile Include="EntitiesDTO\ActividadesMonitoresDTO.cs" />
     <Compile Include="EntitiesDTO\AdministradorDTO.cs" />
     <Compile Include="EntitiesDTO\ClientesDTO.cs" />
