--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -169,6 +169,8 @@
     <EmbeddedResource Include="Vistas\RegistroMonitor.resx">
       <DependentUpon>RegistroMonitor.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\Negocio.EntitiesDTO.ActividadDTO.datasource" />
+    <None Include="Properties\DataSources\Negocio.EntitiesDTO.ActividadesClientesDTO.datasource" />
     <None Include="Properties\DataSources\Negocio.EntitiesDTO.ActividadesMonitoresDTO.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -193,6 +195,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\borrar-usuario%281%29.png" />
+    <None Include="Resources\agregar-usuario%281%29.png" />
+    <None Include="Resources\agregar-usuario.png" />
+    <None Include="Resources\borrar-usuario.png" />
     <None Include="Recursos\AltaUnaActividadBlanco.png" />
     <None Include="Recursos\ListarActividadesBlanco.png" />
     <None Include="Recursos\AltaMonitorBlanco.png" />
