--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -61,6 +61,12 @@
     <Compile Include="ImageButton.Designer.cs">
       <DependentUpon>ImageButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="Vistas\ActividadesCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\ActividadesCliente.Designer.cs">
+      <DependentUpon>ActividadesCliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vistas\AltaActividad.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +128,9 @@
     </Compile>
     <EmbeddedResource Include="ImageButton.resx">
       <DependentUpon>ImageButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\ActividadesCliente.resx">
+      <DependentUpon>ActividadesCliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\AltaActividad.resx">
       <DependentUpon>AltaActividad.cs</DependentUpon>
