--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ImageButton.Designer.cs">
       <DependentUpon>ImageButton.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Vistas\ActividadesCliente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,6 +73,12 @@
     </Compile>
     <Compile Include="Vistas\AltaActividad.Designer.cs">
       <DependentUpon>AltaActividad.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Vistas\InformacionActividad.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Vistas\InformacionActividad.Designer.cs">
+      <DependentUpon>InformacionActividad.cs</DependentUpon>
     </Compile>
     <Compile Include="Vistas\ListadoActUsuario.cs">
       <SubType>Form</SubType>
@@ -115,7 +122,6 @@
     <Compile Include="Vistas\InicioSesion.Designer.cs">
       <DependentUpon>InicioSesion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Texto.cs">
       <SubType>Component</SubType>
@@ -134,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\AltaActividad.resx">
       <DependentUpon>AltaActividad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vistas\InformacionActividad.resx">
+      <DependentUpon>InformacionActividad.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Vistas\ListadoActividades.resx">
       <DependentUpon>ListadoActividades.cs</DependentUpon>
