--- a/ProyectoDI_GrupoD/Presentación.csproj
+++ b/ProyectoDI_GrupoD/Presentación.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Botones.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ComboBoxRedondeado.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ComboBoxRedondeado.Designer.cs">
+      <DependentUpon>ComboBoxRedondeado.cs</DependentUpon>
+    </Compile>
     <Compile Include="ImageButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
