Valoracion y mostrar Valoracion

--- a/Datos/App.Config
+++ b/Datos/App.Config
@@ -10,7 +10,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+
 <connectionStrings>
-	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=C02PC02\SQLEXPRESS;initial catalog=equipod;integrated security=True;encrypt=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	<add name="equipodEntities" connectionString="metadata=res://*/Infrastructure.equipodBD.csdl|res://*/Infrastructure.equipodBD.ssdl|res://*/Infrastructure.equipodBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=KEVIN;initial catalog=equipod;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 </configuration>
